--- a/nova test3.html
+++ b/nova test3.html
@@ -412,19 +412,19 @@ textarea:focus {
     <p>todays special offers!!.</p>
     <div class="designs-container">
         <div class="designs-track">
-            <img src="LOGO.jpeg" alt="Design 1">
-            <img src="design2.jpg" alt="Design 2">
-            <img src="design3.jpg" alt="Design 3">
-            <img src="design4.jpg" alt="Design 4">
-            <img src="design5.jpg" alt="Design 5">
-            <img src="design6.jpg" alt="Design 6">
+            <img src="3.jpeg" alt="Design 1">
+            <img src="1.jpeg" alt="Design 2">
+            <img src="2.jpeg" alt="Design 3">
+            <img src="5.jpeg" alt="Design 4">
+            <img src="6.jpeg" alt="Design 5">
+            <img src="4.jpeg" alt="Design 6">
             <!-- Duplicate images for seamless looping -->
-            <img src="LOGO.jpeg" alt="Design 1">
-            <img src="design2.jpg" alt="Design 2">
-            <img src="design3.jpg" alt="Design 3">
-            <img src="design4.jpg" alt="Design 4">
-            <img src="design5.jpg" alt="Design 5">
-            <img src="design6.jpg" alt="Design 6">
+            <img src="3.jpeg" alt="Design 1">
+            <img src="1.jpeg" alt="Design 2">
+            <img src="2.jpeg" alt="Design 3">
+            <img src="5.jpeg" alt="Design 4">
+            <img src="6.jpeg" alt="Design 5">
+            <img src="4.jpeg" alt="Design 6">
         </div>
     </div>
 </div>
