--- a/nova test3.html
+++ b/nova test3.html
@@ -388,7 +388,7 @@ textarea:focus {
         
         <section id="home" class="hero">
             <h1>Welcome to E-STORE</h1>
-            <p>entha vende machuu..</p>
+            <p>entha vende makkalee..</p>
         </section>
     
         <section id="cafeteria" class="section">
