--- a/nova test3.html
+++ b/nova test3.html
@@ -102,7 +102,7 @@ header {
         }
 
         nav a:hover {
-            color: #fff;
+            color: #ffcc66;
         }
 
         .hamburger {
@@ -122,7 +122,7 @@ header {
             padding: 50px;
             background: url('school-supplies.jpg') no-repeat center;
             background-size: cover;
-            color: #fff;
+            color: #ffcc66;
         }
 
         .section {
