--- a/login.html
+++ b/login.html
@@ -1,4 +1,3 @@
-/* General Styling */
 body {
     font-family: 'Poppins', sans-serif;
     background: linear-gradient(to right, #6a11cb, #2575fc);
@@ -90,13 +89,8 @@ button:hover {
     }
 }
 <form action="login.php" method="POST">
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <button type="submit">Login</button>
-</form>
-<form action="register.php" method="POST">
-    <input type="text" name="name" placeholder="Full Name" required>
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <button type="submit">Register</button>
+    <input type="text" name="username" placeholder="USERNAME" required>
+    <input type="password" name="password" placeholder="PASSWORD" required>
+    
+    <button type="submit">LOGIN</button>
 </form>
